--- a/Shopify App/Base.lproj/Main.storyboard
+++ b/Shopify App/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,7 +23,7 @@
         <!--Login-->
         <scene sceneID="cyG-CX-JZx">
             <objects>
-                <viewController storyboardIdentifier="loginViewController" id="vCF-FG-Bnd" customClass="loginViewController" customModule="E_Commerce" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginViewController" id="vCF-FG-Bnd" customClass="loginViewController" customModule="Shopify_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Akr-DX-vYp">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -123,7 +124,7 @@
         <!--Sing up-->
         <scene sceneID="zvr-Pv-4FJ">
             <objects>
-                <viewController storyboardIdentifier="SingUpViewController" id="frx-cE-x4S" customClass="SingUpViewController" customModule="E_Commerce" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SingUpViewController" id="frx-cE-x4S" customClass="SingUpViewController" customModule="Shopify_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oIq-zv-T4f">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -248,7 +249,7 @@
             </objects>
             <point key="canvasLocation" x="1685.5813953488373" y="-10.300429184549357"/>
         </scene>
-        <!--Item 2-->
+        <!--Home-->
         <scene sceneID="gEZ-d6-OuS">
             <objects>
                 <viewController id="6CC-pd-vmZ" sceneMemberID="viewController">
@@ -258,29 +259,13 @@
                         <viewLayoutGuide key="safeArea" id="sXo-za-8ln"/>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="aGC-kx-7qT"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="home-3" id="aGC-kx-7qT"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g8c-Wz-8Ro" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3208" y="823"/>
         </scene>
-        <!--Item 1-->
-        <scene sceneID="tzn-PA-K7j">
-            <objects>
-                <viewController id="7m1-1A-Fmk" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wIb-UE-qk3">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="4r9-71-dr7"/>
-                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="aaq-Ut-NyD"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="K9v-T9-Yb0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2309" y="823"/>
-        </scene>
-        <!--Item-->
+        <!--Catagory-->
         <scene sceneID="ov5-FQ-OHK">
             <objects>
                 <viewController id="wQD-oC-vUb" sceneMemberID="viewController">
@@ -290,13 +275,13 @@
                         <viewLayoutGuide key="safeArea" id="VgW-K3-af9"/>
                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="6ap-oV-fmG"/>
+                    <tabBarItem key="tabBarItem" title="Catagory" image="square.grid.2x2" catalog="system" id="6ap-oV-fmG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0CA-Oa-q8Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4084" y="823"/>
         </scene>
-        <!--Item-->
+        <!--Me-->
         <scene sceneID="luA-KW-rec">
             <objects>
                 <viewController id="n6s-Qd-eF4" sceneMemberID="viewController">
@@ -306,7 +291,7 @@
                         <viewLayoutGuide key="safeArea" id="Rn0-p2-N0P"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="AVH-jt-xhu"/>
+                    <tabBarItem key="tabBarItem" title="Me" image="profile" id="AVH-jt-xhu"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A2M-AB-hvm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -320,10 +305,10 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fOf-bM-tHo">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" name="mainColor"/>
                     </tabBar>
                     <connections>
-                        <segue destination="7m1-1A-Fmk" kind="relationship" relationship="viewControllers" id="v0k-lM-hmG"/>
                         <segue destination="6CC-pd-vmZ" kind="relationship" relationship="viewControllers" id="JCP-Xo-FiA"/>
                         <segue destination="wQD-oC-vUb" kind="relationship" relationship="viewControllers" id="BHi-RG-AZd"/>
                         <segue destination="n6s-Qd-eF4" kind="relationship" relationship="viewControllers" id="ntR-9K-15t"/>
@@ -331,18 +316,21 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lOb-ui-RQ4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3585" y="11"/>
+            <point key="canvasLocation" x="4083" y="18"/>
         </scene>
     </scenes>
     <resources>
+        <image name="home-3" width="24.333333969116211" height="22"/>
+        <image name="profile" width="21" height="25"/>
+        <image name="square.grid.2x2" catalog="system" width="128" height="114"/>
+        <namedColor name="mainColor">
+            <color red="0.85882352941176465" green="0.18823529411764706" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
