--- a/Shopify App/View/Base.lproj/Main.storyboard
+++ b/Shopify App/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="znj-3A-Ge3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hPN-fb-NDJ">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -57,7 +57,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfz-df-iDJ">
-                                <rect key="frame" x="250.33333333333337" y="519.33333333333337" width="128" height="29"/>
+                                <rect key="frame" x="251.33333333333337" y="519.33333333333337" width="127" height="29"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Create your account">
@@ -155,7 +155,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UWJ-eV-WPb">
-                                <rect key="frame" x="206" y="494" width="163" height="29"/>
+                                <rect key="frame" x="208" y="494" width="161" height="29"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Already have an account?">
@@ -382,24 +382,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G8u-A7-VmT">
-                                <rect key="frame" x="78.666666666666657" y="738" width="278.66666666666674" height="46"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="46" id="aq2-Dm-CWc"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="PROCEED TO CHECKOUT">
-                                            <attributes>
-                                                <font key="NSFont" size="17" name="Helvetica"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                    <color key="baseBackgroundColor" red="0.0057746447280000003" green="0.40880440000000001" blue="0.97160921389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </buttonConfiguration>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="796.0 USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiU-Ka-mwq">
                                 <rect key="frame" x="205" y="643" width="152" height="49"/>
                                 <constraints>
@@ -421,7 +403,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shoes" translatesAutoresizingMaskIntoConstraints="NO" id="AiR-mC-tox">
-                                                    <rect key="frame" x="10" y="11" width="103" height="97"/>
+                                                    <rect key="frame" x="10" y="-144.66666666666666" width="103" height="408.33333333333326"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ADDIDAS" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lkd-cG-MeB">
                                                     <rect key="frame" x="155" y="11" width="226" height="29"/>
@@ -474,7 +456,6 @@
                                                 <constraint firstItem="Lkd-cG-MeB" firstAttribute="top" secondItem="nS3-pk-zgq" secondAttribute="top" constant="11" id="BFx-c3-up3"/>
                                                 <constraint firstItem="AiR-mC-tox" firstAttribute="width" secondItem="nS3-pk-zgq" secondAttribute="width" multiplier="0.262087" id="DYL-MR-KUu"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="LwO-Ko-k48" secondAttribute="bottom" constant="30" id="HTv-cD-Ba8"/>
-                                                <constraint firstItem="AiR-mC-tox" firstAttribute="height" secondItem="nS3-pk-zgq" secondAttribute="height" multiplier="0.815126" id="IPr-aq-Fzo"/>
                                                 <constraint firstItem="iUH-Y2-Hb5" firstAttribute="leading" secondItem="AiR-mC-tox" secondAttribute="trailing" constant="37" id="Ooe-3C-OOm"/>
                                                 <constraint firstItem="AiR-mC-tox" firstAttribute="centerY" secondItem="nS3-pk-zgq" secondAttribute="centerY" id="PX4-KL-XFL"/>
                                                 <constraint firstItem="M9p-w0-ZUg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RqK-lZ-eCI" secondAttribute="trailing" constant="8" symbolic="YES" id="bEW-NM-3vI"/>
@@ -482,7 +463,6 @@
                                                 <constraint firstItem="RqK-lZ-eCI" firstAttribute="top" secondItem="M9p-w0-ZUg" secondAttribute="top" id="dCU-Iv-t77"/>
                                                 <constraint firstItem="Lkd-cG-MeB" firstAttribute="leading" secondItem="AiR-mC-tox" secondAttribute="trailing" constant="42" id="dQW-QG-AdQ"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="iUH-Y2-Hb5" secondAttribute="bottom" constant="27" id="e2o-4M-UoP"/>
-                                                <constraint firstItem="AiR-mC-tox" firstAttribute="top" secondItem="Lkd-cG-MeB" secondAttribute="top" id="fDY-bg-nE5"/>
                                                 <constraint firstItem="LwO-Ko-k48" firstAttribute="leading" secondItem="iUH-Y2-Hb5" secondAttribute="trailing" constant="55" id="gn4-7B-KV1"/>
                                                 <constraint firstAttribute="trailing" secondItem="M9p-w0-ZUg" secondAttribute="trailing" constant="16" id="mvL-Kn-g9G"/>
                                                 <constraint firstItem="RqK-lZ-eCI" firstAttribute="leading" secondItem="iUH-Y2-Hb5" secondAttribute="trailing" constant="22" id="q6P-vt-Yk0"/>
@@ -509,21 +489,39 @@
                                     <outlet property="delegate" destination="hPN-fb-NDJ" id="jas-c3-lx9"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G8u-A7-VmT">
+                                <rect key="frame" x="57" y="734" width="278.66666666666674" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="aq2-Dm-CWc"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="PROCEED TO CHECKOUT">
+                                            <attributes>
+                                                <font key="NSFont" size="17" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseBackgroundColor" red="0.0057746447280000003" green="0.40880440000000001" blue="0.97160921389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Jmb-XK-NGh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="G8u-A7-VmT" firstAttribute="leading" secondItem="Jmb-XK-NGh" secondAttribute="leading" constant="78.666666666666686" id="AdD-PW-2NG"/>
+                            <constraint firstItem="G8u-A7-VmT" firstAttribute="leading" secondItem="Jmb-XK-NGh" secondAttribute="leading" constant="57" id="AdD-PW-2NG"/>
                             <constraint firstItem="xiU-Ka-mwq" firstAttribute="top" secondItem="SAA-cz-d8O" secondAttribute="bottom" constant="8" id="KFz-B4-YbS"/>
-                            <constraint firstItem="G8u-A7-VmT" firstAttribute="top" secondItem="quo-lu-Kf1" secondAttribute="bottom" constant="46" id="Ng6-zN-xpJ"/>
+                            <constraint firstItem="G8u-A7-VmT" firstAttribute="top" secondItem="quo-lu-Kf1" secondAttribute="bottom" constant="42" id="Ng6-zN-xpJ"/>
                             <constraint firstItem="quo-lu-Kf1" firstAttribute="centerY" secondItem="xiU-Ka-mwq" secondAttribute="centerY" id="RmM-P3-URg"/>
                             <constraint firstItem="quo-lu-Kf1" firstAttribute="leading" secondItem="Jmb-XK-NGh" secondAttribute="leading" constant="16" id="Xgx-tb-W3r"/>
                             <constraint firstItem="SAA-cz-d8O" firstAttribute="trailing" secondItem="Jmb-XK-NGh" secondAttribute="trailing" id="dgC-t4-TiJ"/>
                             <constraint firstItem="SAA-cz-d8O" firstAttribute="leading" secondItem="Jmb-XK-NGh" secondAttribute="leading" id="eWh-fj-PCO"/>
                             <constraint firstItem="quo-lu-Kf1" firstAttribute="top" secondItem="SAA-cz-d8O" secondAttribute="bottom" constant="8" id="fix-oi-6Wf"/>
                             <constraint firstItem="xiU-Ka-mwq" firstAttribute="leading" secondItem="quo-lu-Kf1" secondAttribute="trailing" constant="62" id="fqd-Cq-ZjU"/>
-                            <constraint firstItem="G8u-A7-VmT" firstAttribute="centerX" secondItem="REz-6b-33j" secondAttribute="centerX" constant="21.5" id="q7c-9i-nhf"/>
-                            <constraint firstItem="Jmb-XK-NGh" firstAttribute="bottom" secondItem="G8u-A7-VmT" secondAttribute="bottom" constant="34" id="r7Q-JW-smF"/>
+                            <constraint firstItem="G8u-A7-VmT" firstAttribute="centerX" secondItem="REz-6b-33j" secondAttribute="centerX" constant="-0.16666666666662877" id="q7c-9i-nhf"/>
+                            <constraint firstItem="Jmb-XK-NGh" firstAttribute="bottom" secondItem="G8u-A7-VmT" secondAttribute="bottom" constant="38" id="r7Q-JW-smF"/>
                             <constraint firstItem="SAA-cz-d8O" firstAttribute="top" secondItem="Jmb-XK-NGh" secondAttribute="top" constant="95" id="rER-4W-Nla"/>
                             <constraint firstItem="Jmb-XK-NGh" firstAttribute="trailing" secondItem="xiU-Ka-mwq" secondAttribute="trailing" constant="36" id="ySS-bf-MrT"/>
                         </constraints>
@@ -804,7 +802,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h8o-2V-oD2">
-                                                    <rect key="frame" x="28" y="24" width="50" height="33"/>
+                                                    <rect key="frame" x="28" y="26" width="50" height="33"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="33" id="1io-cf-Dmz"/>
                                                         <constraint firstAttribute="width" constant="50" id="ksY-d8-ShY"/>
@@ -813,10 +811,10 @@
                                                     <buttonConfiguration key="configuration" style="plain" image="circle.fill" catalog="system"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple Pay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ruv-vh-ktl">
-                                                    <rect key="frame" x="115" y="23" width="86" height="34"/>
+                                                    <rect key="frame" x="115" y="23" width="160" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="34" id="P6s-Ve-nfJ"/>
-                                                        <constraint firstAttribute="width" constant="86" id="kb9-tb-Ngf"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="3On-Nh-Ec1"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Zb6-eI-lfG"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <nil key="textColor"/>
@@ -825,9 +823,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="h8o-2V-oD2" firstAttribute="height" secondItem="bDC-ZH-0KF" secondAttribute="height" multiplier="0.366667" id="FwS-P3-Sk1"/>
-                                                <constraint firstItem="h8o-2V-oD2" firstAttribute="bottom" secondItem="Ruv-vh-ktl" secondAttribute="bottom" id="TdX-yT-tDb"/>
+                                                <constraint firstItem="h8o-2V-oD2" firstAttribute="bottom" secondItem="Ruv-vh-ktl" secondAttribute="bottom" constant="6" id="TdX-yT-tDb"/>
                                                 <constraint firstItem="Ruv-vh-ktl" firstAttribute="leading" secondItem="h8o-2V-oD2" secondAttribute="trailing" constant="37" id="bvu-qm-8y2"/>
-                                                <constraint firstItem="Ruv-vh-ktl" firstAttribute="height" secondItem="bDC-ZH-0KF" secondAttribute="height" multiplier="0.377778" id="cgh-iJ-bcc"/>
                                                 <constraint firstItem="Ruv-vh-ktl" firstAttribute="top" secondItem="bDC-ZH-0KF" secondAttribute="topMargin" constant="12" id="gd1-mv-M17"/>
                                                 <constraint firstItem="h8o-2V-oD2" firstAttribute="leading" secondItem="bDC-ZH-0KF" secondAttribute="leadingMargin" constant="8" id="n25-Vq-6Jl"/>
                                             </constraints>
